[package]
name = "file-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
thiserror = "*"
anyhow = "*"
chrono = { version = "*", features = ["alloc", "std"] }
quick-xml = "*"
dateparser = "*"
rust_xlsxwriter = "*"
rusqlite = { version = "0.29.0", features = ["bundled"] }
fallible-streaming-iterator = "*"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
